// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the StatePerson component when the milestone is initially NOT collapsed it renders correctly after being collapsed 1`] = `
<StatePerson
  desc="personnel desc"
  handleDelete={[MockFunction]}
  handleEditCost={[MockFunction]}
  handleEditFTE={[MockFunction]}
  handleEditPersonDesc={[MockFunction]}
  handleEditPersonTitle={[MockFunction]}
  idx={3}
  initialCollapsed={false}
  title="personnel title"
  years={
    Object {
      "2003": Object {
        "amt": 85938,
        "perc": 3,
      },
      "2004": Object {
        "amt": 37523,
        "perc": 0.5,
      },
    }
  }
>
  <StatePersonReview
    desc="personnel desc"
    expand={[Function]}
    handleDelete={[MockFunction]}
    handleEditCost={[MockFunction]}
    handleEditFTE={[MockFunction]}
    handleEditPersonDesc={[MockFunction]}
    handleEditPersonTitle={[MockFunction]}
    idx={3}
    title="personnel title"
    years={
      Object {
        "2003": Object {
          "amt": 85938,
          "perc": 3,
        },
        "2004": Object {
          "amt": 37523,
          "perc": 0.5,
        },
      }
    }
  >
    <StandardReview
      editHref={null}
      heading="4. personnel title"
      headingLevel={6}
      onDeleteClick={[MockFunction]}
      onEditClick={[Function]}
    >
      <Review
        editContent={
          <div
            className="nowrap"
          >
            <Button
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              Edit
            </Button>
            <React.Fragment>
              |
              <Button
                onClick={[MockFunction]}
                size="small"
                type="button"
                variation="transparent"
              >
                Remove
              </Button>
            </React.Fragment>
          </div>
        }
        editText="Edit"
        heading="4. personnel title"
        headingLevel={6}
      >
        <div
          className="ds-c-review ds-u-border-bottom--2 ds-u-padding-y--2 ds-u-justify-content--between ds-u-display--flex"
        >
          <div
            className="ds-u-margin-right--2"
          >
            <h6
              className="ds-c-review__heading ds-text ds-u-margin-bottom--0 ds-u-font-weight--bold ds-u-display--inline-block"
            >
              4. personnel title
            </h6>
            <div
              className="ds-c-review__body"
            >
              personnel desc
              <div
                className="ds-u-margin-top--2"
              >
                <div
                  key="2003"
                >
                  <strong>
                    2003
                     Costs:
                  </strong>
                   
                  <Dollars
                    long={false}
                  >
                    <span
                      className="visibility--screen"
                    >
                      $85,938
                    </span>
                    <span
                      className="visibility--print"
                    >
                      $85,938
                    </span>
                  </Dollars>
                   |
                   
                  <strong>
                    FTEs:
                  </strong>
                   
                  3
                </div>
                <div
                  key="2004"
                >
                  <strong>
                    2004
                     Costs:
                  </strong>
                   
                  <Dollars
                    long={false}
                  >
                    <span
                      className="visibility--screen"
                    >
                      $37,523
                    </span>
                    <span
                      className="visibility--print"
                    >
                      $37,523
                    </span>
                  </Dollars>
                   |
                   
                  <strong>
                    FTEs:
                  </strong>
                   
                  0.5
                </div>
              </div>
            </div>
          </div>
          <div
            className="nowrap"
          >
            <Button
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              <button
                className="ds-c-button ds-c-button--transparent ds-c-button--small"
                onClick={[Function]}
                type="button"
              >
                Edit
              </button>
            </Button>
            |
            <Button
              onClick={[MockFunction]}
              size="small"
              type="button"
              variation="transparent"
            >
              <button
                className="ds-c-button ds-c-button--transparent ds-c-button--small"
                onClick={[Function]}
                type="button"
              >
                Remove
              </button>
            </Button>
          </div>
        </div>
      </Review>
    </StandardReview>
  </StatePersonReview>
</StatePerson>
`;

exports[`the StatePerson component when the milestone is initially NOT collapsed it renders correctly initially 1`] = `
<StatePerson
  desc="personnel desc"
  handleDelete={[MockFunction]}
  handleEditCost={[MockFunction]}
  handleEditFTE={[MockFunction]}
  handleEditPersonDesc={[MockFunction]}
  handleEditPersonTitle={[MockFunction]}
  idx={3}
  initialCollapsed={false}
  title="personnel title"
  years={
    Object {
      "2003": Object {
        "amt": 85938,
        "perc": 3,
      },
      "2004": Object {
        "amt": 37523,
        "perc": 0.5,
      },
    }
  }
>
  <StatePersonForm
    collapse={[Function]}
    desc="personnel desc"
    handleDelete={[MockFunction]}
    handleEditCost={[MockFunction]}
    handleEditFTE={[MockFunction]}
    handleEditPersonDesc={[MockFunction]}
    handleEditPersonTitle={[MockFunction]}
    idx={3}
    title="personnel title"
    years={
      Object {
        "2003": Object {
          "amt": 85938,
          "perc": 3,
        },
        "2004": Object {
          "amt": 37523,
          "perc": 0.5,
        },
      }
    }
  >
    <div
      className="ds-u-border-bottom--2 ds-u-padding-y--2"
    >
      <h6
        className="ds-h4"
      >
        Personnel 
        4
        :
      </h6>
      <TextField
        label="Personnel title"
        name="title"
        onChange={[Function]}
        type="text"
        value="personnel title"
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            fieldId="textfield_1"
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_1"
            >
              <span
                className=""
              >
                Personnel title
              </span>
            </label>
          </FormLabel>
          <input
            className="ds-c-field"
            id="textfield_1"
            name="title"
            onChange={[Function]}
            type="text"
            value="personnel title"
          />
        </div>
      </TextField>
      <TextField
        label="Description"
        multiline={true}
        name="desc"
        onChange={[Function]}
        rows={5}
        type="text"
        value="personnel desc"
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            fieldId="textfield_2"
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_2"
            >
              <span
                className=""
              >
                Description
              </span>
            </label>
          </FormLabel>
          <textarea
            className="ds-c-field"
            id="textfield_2"
            name="desc"
            onChange={[Function]}
            rows={5}
            value="personnel desc"
          />
        </div>
      </TextField>
      <h5
        className="ds-h5"
      >
        2003
         Costs
      </h5>
      <div
        className="ds-c-choice__checkedChild ds-u-padding-y--0"
      >
        <DollarField
          label="Costs with benefits"
          name="cost"
          onChange={[Function]}
          size="medium"
          value={85938}
        >
          <TextField
            label="Costs with benefits"
            mask="currency"
            name="cost"
            onChange={[Function]}
            size="medium"
            type="text"
            value={85938}
          >
            <div
              className="ds-u-clearfix"
            >
              <FormLabel
                component="label"
                fieldId="textfield_3"
              >
                <label
                  className="ds-c-label"
                  htmlFor="textfield_3"
                >
                  <span
                    className=""
                  >
                    Costs with benefits
                  </span>
                </label>
              </FormLabel>
              <div
                className="ds-c-field-mask ds-c-field-mask--currency"
              >
                <div
                  className="ds-c-field__before ds-c-field__before--currency"
                >
                  $
                </div>
                <Mask
                  mask="currency"
                >
                  <input
                    aria-label="Costs with benefits. Enter amount in dollars."
                    className="ds-c-field ds-c-field--currency ds-c-field--medium"
                    id="textfield_3"
                    name="cost"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={85938}
                  />
                </Mask>
              </div>
            </div>
          </TextField>
        </DollarField>
        <TextField
          label="Number of FTEs"
          name="ftes"
          onChange={[Function]}
          size="medium"
          type="number"
          value={3}
        >
          <div
            className="ds-u-clearfix"
          >
            <FormLabel
              component="label"
              fieldId="textfield_4"
            >
              <label
                className="ds-c-label"
                htmlFor="textfield_4"
              >
                <span
                  className=""
                >
                  Number of FTEs
                </span>
              </label>
            </FormLabel>
            <input
              className="ds-c-field ds-c-field--medium"
              id="textfield_4"
              name="ftes"
              onChange={[Function]}
              type="number"
              value={3}
            />
          </div>
        </TextField>
      </div>
      <h5
        className="ds-h5"
      >
        2004
         Costs
      </h5>
      <div
        className="ds-c-choice__checkedChild ds-u-padding-y--0"
      >
        <DollarField
          label="Costs with benefits"
          name="cost"
          onChange={[Function]}
          size="medium"
          value={37523}
        >
          <TextField
            label="Costs with benefits"
            mask="currency"
            name="cost"
            onChange={[Function]}
            size="medium"
            type="text"
            value={37523}
          >
            <div
              className="ds-u-clearfix"
            >
              <FormLabel
                component="label"
                fieldId="textfield_5"
              >
                <label
                  className="ds-c-label"
                  htmlFor="textfield_5"
                >
                  <span
                    className=""
                  >
                    Costs with benefits
                  </span>
                </label>
              </FormLabel>
              <div
                className="ds-c-field-mask ds-c-field-mask--currency"
              >
                <div
                  className="ds-c-field__before ds-c-field__before--currency"
                >
                  $
                </div>
                <Mask
                  mask="currency"
                >
                  <input
                    aria-label="Costs with benefits. Enter amount in dollars."
                    className="ds-c-field ds-c-field--currency ds-c-field--medium"
                    id="textfield_5"
                    name="cost"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={37523}
                  />
                </Mask>
              </div>
            </div>
          </TextField>
        </DollarField>
        <TextField
          label="Number of FTEs"
          name="ftes"
          onChange={[Function]}
          size="medium"
          type="number"
          value={0.5}
        >
          <div
            className="ds-u-clearfix"
          >
            <FormLabel
              component="label"
              fieldId="textfield_6"
            >
              <label
                className="ds-c-label"
                htmlFor="textfield_6"
              >
                <span
                  className=""
                >
                  Number of FTEs
                </span>
              </label>
            </FormLabel>
            <input
              className="ds-c-field ds-c-field--medium"
              id="textfield_6"
              name="ftes"
              onChange={[Function]}
              type="number"
              value={0.5}
            />
          </div>
        </TextField>
      </div>
      <Button
        className="ds-u-margin-top--2"
        onClick={[Function]}
        type="button"
        variation="primary"
      >
        <button
          className="ds-c-button ds-c-button--primary ds-u-margin-top--2"
          onClick={[Function]}
          type="button"
        >
          Done
        </button>
      </Button>
    </div>
  </StatePersonForm>
</StatePerson>
`;

exports[`the StatePerson component when the person is initially collapsed it renders correctly after being expanded 1`] = `
<StatePerson
  desc="personnel desc"
  handleDelete={[MockFunction]}
  handleEditCost={[MockFunction]}
  handleEditFTE={[MockFunction]}
  handleEditPersonDesc={[MockFunction]}
  handleEditPersonTitle={[MockFunction]}
  idx={3}
  initialCollapsed={true}
  title="personnel title"
  years={
    Object {
      "2003": Object {
        "amt": 85938,
        "perc": 3,
      },
      "2004": Object {
        "amt": 37523,
        "perc": 0.5,
      },
    }
  }
>
  <StatePersonForm
    collapse={[Function]}
    desc="personnel desc"
    handleDelete={[MockFunction]}
    handleEditCost={[MockFunction]}
    handleEditFTE={[MockFunction]}
    handleEditPersonDesc={[MockFunction]}
    handleEditPersonTitle={[MockFunction]}
    idx={3}
    title="personnel title"
    years={
      Object {
        "2003": Object {
          "amt": 85938,
          "perc": 3,
        },
        "2004": Object {
          "amt": 37523,
          "perc": 0.5,
        },
      }
    }
  >
    <div
      className="ds-u-border-bottom--2 ds-u-padding-y--2"
    >
      <h6
        className="ds-h4"
      >
        Personnel 
        4
        :
      </h6>
      <TextField
        label="Personnel title"
        name="title"
        onChange={[Function]}
        type="text"
        value="personnel title"
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            fieldId="textfield_7"
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_7"
            >
              <span
                className=""
              >
                Personnel title
              </span>
            </label>
          </FormLabel>
          <input
            className="ds-c-field"
            id="textfield_7"
            name="title"
            onChange={[Function]}
            type="text"
            value="personnel title"
          />
        </div>
      </TextField>
      <TextField
        label="Description"
        multiline={true}
        name="desc"
        onChange={[Function]}
        rows={5}
        type="text"
        value="personnel desc"
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            fieldId="textfield_8"
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_8"
            >
              <span
                className=""
              >
                Description
              </span>
            </label>
          </FormLabel>
          <textarea
            className="ds-c-field"
            id="textfield_8"
            name="desc"
            onChange={[Function]}
            rows={5}
            value="personnel desc"
          />
        </div>
      </TextField>
      <h5
        className="ds-h5"
      >
        2003
         Costs
      </h5>
      <div
        className="ds-c-choice__checkedChild ds-u-padding-y--0"
      >
        <DollarField
          label="Costs with benefits"
          name="cost"
          onChange={[Function]}
          size="medium"
          value={85938}
        >
          <TextField
            label="Costs with benefits"
            mask="currency"
            name="cost"
            onChange={[Function]}
            size="medium"
            type="text"
            value={85938}
          >
            <div
              className="ds-u-clearfix"
            >
              <FormLabel
                component="label"
                fieldId="textfield_9"
              >
                <label
                  className="ds-c-label"
                  htmlFor="textfield_9"
                >
                  <span
                    className=""
                  >
                    Costs with benefits
                  </span>
                </label>
              </FormLabel>
              <div
                className="ds-c-field-mask ds-c-field-mask--currency"
              >
                <div
                  className="ds-c-field__before ds-c-field__before--currency"
                >
                  $
                </div>
                <Mask
                  mask="currency"
                >
                  <input
                    aria-label="Costs with benefits. Enter amount in dollars."
                    className="ds-c-field ds-c-field--currency ds-c-field--medium"
                    id="textfield_9"
                    name="cost"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={85938}
                  />
                </Mask>
              </div>
            </div>
          </TextField>
        </DollarField>
        <TextField
          label="Number of FTEs"
          name="ftes"
          onChange={[Function]}
          size="medium"
          type="number"
          value={3}
        >
          <div
            className="ds-u-clearfix"
          >
            <FormLabel
              component="label"
              fieldId="textfield_10"
            >
              <label
                className="ds-c-label"
                htmlFor="textfield_10"
              >
                <span
                  className=""
                >
                  Number of FTEs
                </span>
              </label>
            </FormLabel>
            <input
              className="ds-c-field ds-c-field--medium"
              id="textfield_10"
              name="ftes"
              onChange={[Function]}
              type="number"
              value={3}
            />
          </div>
        </TextField>
      </div>
      <h5
        className="ds-h5"
      >
        2004
         Costs
      </h5>
      <div
        className="ds-c-choice__checkedChild ds-u-padding-y--0"
      >
        <DollarField
          label="Costs with benefits"
          name="cost"
          onChange={[Function]}
          size="medium"
          value={37523}
        >
          <TextField
            label="Costs with benefits"
            mask="currency"
            name="cost"
            onChange={[Function]}
            size="medium"
            type="text"
            value={37523}
          >
            <div
              className="ds-u-clearfix"
            >
              <FormLabel
                component="label"
                fieldId="textfield_11"
              >
                <label
                  className="ds-c-label"
                  htmlFor="textfield_11"
                >
                  <span
                    className=""
                  >
                    Costs with benefits
                  </span>
                </label>
              </FormLabel>
              <div
                className="ds-c-field-mask ds-c-field-mask--currency"
              >
                <div
                  className="ds-c-field__before ds-c-field__before--currency"
                >
                  $
                </div>
                <Mask
                  mask="currency"
                >
                  <input
                    aria-label="Costs with benefits. Enter amount in dollars."
                    className="ds-c-field ds-c-field--currency ds-c-field--medium"
                    id="textfield_11"
                    name="cost"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={37523}
                  />
                </Mask>
              </div>
            </div>
          </TextField>
        </DollarField>
        <TextField
          label="Number of FTEs"
          name="ftes"
          onChange={[Function]}
          size="medium"
          type="number"
          value={0.5}
        >
          <div
            className="ds-u-clearfix"
          >
            <FormLabel
              component="label"
              fieldId="textfield_12"
            >
              <label
                className="ds-c-label"
                htmlFor="textfield_12"
              >
                <span
                  className=""
                >
                  Number of FTEs
                </span>
              </label>
            </FormLabel>
            <input
              className="ds-c-field ds-c-field--medium"
              id="textfield_12"
              name="ftes"
              onChange={[Function]}
              type="number"
              value={0.5}
            />
          </div>
        </TextField>
      </div>
      <Button
        className="ds-u-margin-top--2"
        onClick={[Function]}
        type="button"
        variation="primary"
      >
        <button
          className="ds-c-button ds-c-button--primary ds-u-margin-top--2"
          onClick={[Function]}
          type="button"
        >
          Done
        </button>
      </Button>
    </div>
  </StatePersonForm>
</StatePerson>
`;

exports[`the StatePerson component when the person is initially collapsed it renders correctly initially 1`] = `
<StatePerson
  desc="personnel desc"
  handleDelete={[MockFunction]}
  handleEditCost={[MockFunction]}
  handleEditFTE={[MockFunction]}
  handleEditPersonDesc={[MockFunction]}
  handleEditPersonTitle={[MockFunction]}
  idx={3}
  initialCollapsed={true}
  title="personnel title"
  years={
    Object {
      "2003": Object {
        "amt": 85938,
        "perc": 3,
      },
      "2004": Object {
        "amt": 37523,
        "perc": 0.5,
      },
    }
  }
>
  <StatePersonReview
    desc="personnel desc"
    expand={[Function]}
    handleDelete={[MockFunction]}
    handleEditCost={[MockFunction]}
    handleEditFTE={[MockFunction]}
    handleEditPersonDesc={[MockFunction]}
    handleEditPersonTitle={[MockFunction]}
    idx={3}
    title="personnel title"
    years={
      Object {
        "2003": Object {
          "amt": 85938,
          "perc": 3,
        },
        "2004": Object {
          "amt": 37523,
          "perc": 0.5,
        },
      }
    }
  >
    <StandardReview
      editHref={null}
      heading="4. personnel title"
      headingLevel={6}
      onDeleteClick={[MockFunction]}
      onEditClick={[Function]}
    >
      <Review
        editContent={
          <div
            className="nowrap"
          >
            <Button
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              Edit
            </Button>
            <React.Fragment>
              |
              <Button
                onClick={[MockFunction]}
                size="small"
                type="button"
                variation="transparent"
              >
                Remove
              </Button>
            </React.Fragment>
          </div>
        }
        editText="Edit"
        heading="4. personnel title"
        headingLevel={6}
      >
        <div
          className="ds-c-review ds-u-border-bottom--2 ds-u-padding-y--2 ds-u-justify-content--between ds-u-display--flex"
        >
          <div
            className="ds-u-margin-right--2"
          >
            <h6
              className="ds-c-review__heading ds-text ds-u-margin-bottom--0 ds-u-font-weight--bold ds-u-display--inline-block"
            >
              4. personnel title
            </h6>
            <div
              className="ds-c-review__body"
            >
              personnel desc
              <div
                className="ds-u-margin-top--2"
              >
                <div
                  key="2003"
                >
                  <strong>
                    2003
                     Costs:
                  </strong>
                   
                  <Dollars
                    long={false}
                  >
                    <span
                      className="visibility--screen"
                    >
                      $85,938
                    </span>
                    <span
                      className="visibility--print"
                    >
                      $85,938
                    </span>
                  </Dollars>
                   |
                   
                  <strong>
                    FTEs:
                  </strong>
                   
                  3
                </div>
                <div
                  key="2004"
                >
                  <strong>
                    2004
                     Costs:
                  </strong>
                   
                  <Dollars
                    long={false}
                  >
                    <span
                      className="visibility--screen"
                    >
                      $37,523
                    </span>
                    <span
                      className="visibility--print"
                    >
                      $37,523
                    </span>
                  </Dollars>
                   |
                   
                  <strong>
                    FTEs:
                  </strong>
                   
                  0.5
                </div>
              </div>
            </div>
          </div>
          <div
            className="nowrap"
          >
            <Button
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              <button
                className="ds-c-button ds-c-button--transparent ds-c-button--small"
                onClick={[Function]}
                type="button"
              >
                Edit
              </button>
            </Button>
            |
            <Button
              onClick={[MockFunction]}
              size="small"
              type="button"
              variation="transparent"
            >
              <button
                className="ds-c-button ds-c-button--transparent ds-c-button--small"
                onClick={[Function]}
                type="button"
              >
                Remove
              </button>
            </Button>
          </div>
        </div>
      </Review>
    </StandardReview>
  </StatePersonReview>
</StatePerson>
`;
